--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <h1 class="title">大沢斗海について知ろう！</h1>
+    <h1 class="title">私について知ろう！</h1>
     <p>基本情報</p>
   </body>
 </html>
