--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>This is Toumi</title>
-    <link rel="stylesheet" href="stylesheet.css">
-  </head>
-  <body>
-    <h1 class="title">私について知ろう！</h1>
-    <p>基本情報</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>This is Toumi</title>
+  <link rel="stylesheet" href="stylesheet.css">
+</head>
+<body>
+  <h1 class="title">私について知ろう！</h1>
+  <p>基本情報</p>
+</body>
 </html>
